--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Smart Talent Acquisition System - Campus Recruitment Platform</title>
     <meta name="description" content="AI-powered talent acquisition platform connecting talented graduates with ideal career opportunities through intelligent matching algorithms." />
     <meta name="author" content="Smart Talent Solutions" />
+    <link rel="stylesheet" href="">
 
     <meta property="og:title" content="Smart Talent Acquisition System - Campus Recruitment Platform" />
     <meta property="og:description" content="AI-powered talent acquisition platform connecting talented graduates with ideal career opportunities through intelligent matching algorithms." />
